Feature aca maven plugin (#2501)
* Init aca maven plugin (#2493)

* init aca maven plugin

* remove useless items

* fix comments

* Support code build path with dockerfile (#2495)

* init aca maven plugin

* remove useless items

* init acr build

* reuse timestamp

* fix comments

* add todo

* Support generating dockerfile for code/artifact path (#2497)

* init aca maven plugin

* remove useless items

* init acr build

* reuse timestamp

* fix comments

* add todo

* support generate dockerfile

* remove useless comments

* fix comments

* Add unit test and remove todos (#2499)

* init aca maven plugin

* remove useless items

* init acr build

* reuse timestamp

* fix comments

* add todo

* support generate dockerfile

* remove useless comments

* add unit tests and remove todo

* merge fix comments

* rename folder

* fix

* fix pom

* small fix

* small word fix

* use mariner image (#2502)

* use mariner image

* ifx

* fix comments

* use java 17 as default

* modify dockerfile comments

* fix comments

* fix comments

* small fix for the deployment type case sensitivity issue

* fix pom for tests

* fix typo

--- a/azure-maven-plugin-lib/src/main/resources/bundles/com/microsoft/azure/toolkit/operation.properties
+++ b/azure-maven-plugin-lib/src/main/resources/bundles/com/microsoft/azure/toolkit/operation.properties
@@ -8,6 +8,7 @@ user/functionapp.package=generate configuration files and prepare staging direct
 user/functionapp.run=run function app locally
 user/webapp.deploy_app=deploy to Azure Web App with resource creation or updating
 user/webapp.config=generate configuration for web app maven plugin
+user/containerapps.deploy_mojo=deploy container app to Azure from config
 ######################end mojo action operations######################
 ######################start auto action operations######################
 auto/$resource.preload.type=preload {0}s
@@ -15,6 +16,7 @@ auto/$resource.refresh_on_subscription_changed.type=refresh {0}s on subscription
 ######################end auto action operations######################
 ######################start common service operations######################
 internal/account.login.type=login with ({0})
+internal/containerapps.create_update_app.app=create or update container app({0}) from config
 internal/springcloud.create_update_app.app=create or update Spring app({0}) from config
 internal/springcloud.wait_until_deployment_ready.deployment|app=wait deployment({0}) of Spring app({1}) to be ready
 internal/webapp.create_update_app.app=create or update Azure Web App ({0}) from config
@@ -229,4 +231,3 @@ azure/keyvault.update_certificate.certificate=update Certificate ({0})
 azure/keyvault.load_certificate_version.version=load Certificate Version ({0})
 azure/keyvault.create_certificate_version.version=create Certificate Version ({0})
 azure/keyvault.update_certificate_version.version=update Certificate Version ({0})
-
