--- a/azure-container-apps-maven-plugin/pom.xml
+++ b/azure-container-apps-maven-plugin/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.microsoft.azure</groupId>
         <artifactId>azure-maven-plugins</artifactId>
-        <version>1.40.0</version>
+        <version>1.41.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.microsoft.azure</groupId>
     <artifactId>azure-container-apps-maven-plugin</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     <name>Azure Container Apps Maven Plugin</name>
     <description>Maven Plugin for Azure Container Apps</description>
