--- a/azure-toolkit-libs/azure-toolkit-containerapps-lib/pom.xml
+++ b/azure-toolkit-libs/azure-toolkit-containerapps-lib/pom.xml
@@ -28,6 +28,10 @@
         </dependency>
         <dependency>
             <groupId>com.microsoft.azure</groupId>
+            <artifactId>azure-toolkit-identity-lib</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-toolkit-containerregistry-lib</artifactId>
         </dependency>
         <dependency>
