--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
             <dependency>
                 <groupId>com.microsoft.azure</groupId>
                 <artifactId>azure-toolkit-libs</artifactId>
-                <version>0.51.0-SNAPSHOT</version>
+                <version>0.51.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
