--- a/azure-container-apps-maven-plugin/pom.xml
+++ b/azure-container-apps-maven-plugin/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.microsoft.azure</groupId>
     <artifactId>azure-container-apps-maven-plugin</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
     <packaging>maven-plugin</packaging>
     <name>Azure Container Apps Maven Plugin</name>
     <description>Maven Plugin for Azure Container Apps</description>
